/*
 * Copyright Â© 2021-2022 Durudex

 * This file is part of Durudex: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.

 * Durudex is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.

 * You should have received a copy of the GNU Affero General Public License
 * along with Durudex. If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package durudex.user;

option go_package = "github.com/durudex/durudex-gateway/internal/delivery/grpc/pb;pb";

import "internal/delivery/grpc/pb/types/uuid.proto";
import "internal/delivery/grpc/pb/types/status.proto";

service AuthUserService {
  rpc SignUp (SignUpRequest) returns (types.UUID);
  rpc SignIn (SignInRequest) returns (Tokens);
  rpc RefreshTokens (RefreshTokenRequest) returns (Tokens);
  rpc Logout (RefreshTokenRequest) returns (types.Status);
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message SignInRequest {
  string username = 1;
  string password = 2;
  string ip = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
  string ip = 2;
}

message Tokens {
  string access = 1;
  string refresh = 2;
}
