/*
 * Copyright Â© 2022 Durudex

 * This file is part of Durudex: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.

 * Durudex is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.

 * You should have received a copy of the GNU Affero General Public License
 * along with Durudex. If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package durudex.user;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/durudex/durudex-gateway/internal/delivery/grpc/pb;pb";

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
}

message GetUserByIDRequest {
  bytes id = 1;
}

message GetUserByIDResponse {
  string username = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp last_visit = 3;
  bool verified = 4;
  optional string avatar_url = 5;
}

message ForgotPasswordRequest {
  string email = 1;
  string password = 2;
}

message ForgotPasswordResponse {}
